--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body{
     /*backgropxund-image: url(../imagens/fundo-site.jpg);*/
     /* background-image: url(https://images4.alphacoders.com/294/294938.gif); */
-    background-image: url(https://images.hdqwalls.com/wallpapers/nexus-space-digital-universe-4k-rt.jpg);
+    background-image: url(../imagens/fundo-site-space.jpg);
      
     background-repeat: no-repeat;
     background-size: cover;
